# safu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONFIG.ini  Jenkinsfile  README.md  safu_0.53.0.orig.tar.gz.delta  safu_0.53.0.orig.tar.gz.id  safu_0.54.1.orig.tar.xz.delta  safu_0.54.1.orig.tar.xz.id  safu_0.55.0.orig.tar.xz.delta  safu_0.55.0.orig.tar.xz.id  safu_0.56.2.orig.tar.xz.delta  safu_0.56.2.orig.tar.xz.id  safu_0.57.1.orig.tar.xz.delta  safu_0.57.1.orig.tar.xz.id  safu_0.58.2.orig.tar.xz.delta  safu_0.58.2.orig.tar.xz.id  safu_0.58.4.orig.tar.xz.delta  safu_0.58.4.orig.tar.xz.id  safu_0.60.1.orig.tar.xz.delta  safu_0.60.1.orig.tar.xz.id  safu_0.61.1.orig.tar.xz.delta  safu_0.61.1.orig.tar.xz.id  safu_0.62.0.orig.tar.xz.delta  safu_0.62.0.orig.tar.xz.id  safu_0.63.1.orig.tar.xz.delta  safu_0.63.1.orig.tar.xz.id  safu_0.64.4.orig.tar.xz.delta  safu_0.64.4.orig.tar.xz.id
.github/: index.md
.github/workflows/: build-and-test.yml  build-documentation.yml
ci/: Dockerfile  build.sh  build_doc.sh  checklicense.sh  clean.sh  code_lint.py  create_coverage.sh  create_debian_release.sh  dependencies_default.json  dependencies_emlix.json  docker-run.sh  index.rst  install_deps.py  package.sh  publish_kpis.sh  run_utest.sh  updateversion.sh
cmake/: ConfigureLibrary.cmake  FetchLibrary.cmake  Packing.cmake  index.rst  project.cmake
debian/: .gitignore  changelog  control  copyright  devdoc-index.md  gbp.conf  libsafu-dev.install  libsafu0.install  rules
debian.native/: README.md  changelog  control  copyright  libmock-safu0.install  libsafu0.install  not-installed  safu-doc.install  safu-doc.lintian-overrides  watch
src/: CMakeLists.txt
test/utest/safu/common/: CMakeLists.txt
test/utest/safu/common/safuAllocMem/: CMakeLists.txt  case_exterr_realloc.c  case_success_all_param_zero.c  case_success_new_mem.c  case_success_newlen_zero.c  case_success_oldptr_null.c  safuAllocMem_utest.c
test/utest/safu/common/safuBase64Decode/: CMakeLists.txt  case_error.c  case_success.c  safuBase64Decode_utest.c  safuBase64Decode_utest.h
test/utest/safu/common/safuBase64Encode/: CMakeLists.txt  case_error.c  case_success.c  safuBase64Encode_utest.c  safuBase64Encode_utest.h
test/utest/safu/common/safuCheckBase64Encoding/: CMakeLists.txt  case_error.c  case_success.c  safuCheckBase64Encoding_utest.c  safuCheckBase64Encoding_utest.h
test/utest/safu/common/safuGetEnvOr/: CMakeLists.txt  case_err_key_is_null.c  case_success_key_exists.c  case_success_key_not_exists.c  safuGetEnvOr_utest.c
test/utest/safu/common/safuGetHardwareId/: case_env.c  case_err_file.c  case_success.c  safuGetHardwareId_utest.c  safuGetHardwareId_utest.h  safuGetHardwareId_utils.c
test/utest/safu/common/safuRecvExactly/: case_recv_exactly.c  mock_transferExactly.c  safuRecvExactly_utest.c
test/utest/safu/common/safuSendExactly/: case_send_exactly.c  safuSendExactly_utest.c
test/utest/safu/common/safuStrdup/: CMakeLists.txt  case_err_input_null.c  case_exterr_strdup.c  case_success_string_duplicated.c  safuStrdup_utest.c  safuStrdup_utest.h
test/utest/safu/common/safuStringIsEmpty/: CMakeLists.txt
test/utest/safu/common/safuTransferExactly/: case_err_buff_null.c  case_err_fd_lt_zero.c  case_err_len_lt_one.c  case_err_transfer_bytes_eq_zero.c  case_err_transfer_bytes_lt_zero.c  case_success_eintr.c  case_success_in_one_loop.c  case_success_in_two_loops.c  mock_transferFunc.c  safuTransferExactly_utest.c
test/utest/safu/json/safuJsonAddNewInt/: CMakeLists.txt  case_err_add_object_failed_array.c  case_err_add_object_failed_object.c  case_err_new_object_failed_array.c  case_err_new_object_failed_object.c  case_success_array.c  case_success_object.c  safuJsonAddNewInt_utest.c
test/utest/safu/json/safuJsonGetBool/: CMakeLists.txt  case_err_get_object_failed_array.c  case_err_get_object_failed_object.c  case_err_get_type_failed_array.c  case_err_get_type_failed_object.c  case_success_array.c  case_success_object.c  safuJsonGetBool_utest.c  safuJsonGetBool_utest.h
(+319 files in other folders)
