# SPDX-License-Identifier: MIT
add_subdirectory(safuAllocMem)
add_subdirectory(safuStrdup)
add_subdirectory(safuBase64Encode)
add_subdirectory(safuCheckBase64Encoding)
add_subdirectory(safuBase64Decode)
add_subdirectory(safuGetEnvOr)
add_subdirectory(safuGetHardwareId)
add_subdirectory(safuRecvExactly)
add_subdirectory(safuSendExactly)
add_subdirectory(safuStringIsEmpty)
add_subdirectory(safuTransferExactly)
